tSQLt Release Notes
===================
An online version of these release notes is available at:
http://tsqlt.org/category/release-notes/


Release: LATEST-BUILD-NUMBER 

BUG FIXES:
1. tSQLt.SpyProcedure can handle user defined types. User defined types may be in schemas and
   may also be not nullable.
---------------------------

Release: V1.0.4351.28410

BUG FIXES:
1. tSQLt.NewTestClass now handles schema names with spaces and other special characters
2. tSQLt.NewTestClass now handles if a quoted name is passed for the new schema name

NEW FEATURES:
1. tSQLt.Uninstall removes tSQLt from the database
2. tSQLt.RunWithXmlResults executes like tSQLt.Run, but produces results is XML
3. tSQLt.TestClasses is a view that lists properties of test classes
4. tSQLt.Tests is a view that lists properties of test cases
5. Example.sql includes an example database and is referenced by the updated Quick Start
   (http://tsqlt.org/quick-start)
6. tSQLt.Info() provides information about the installed version of tSQLt.

OTHER:
1. New numbering system for the tSQLt builds. The current version is: V1.0.4351.28410
---------------------------

build.12:

BUG FIXES:
1. tSQLt.Fail now handles NULL values as parameters.
2. Corrected XmlResultFormatter to have root element of 'testsuites' instead of 'root'.
This improves compatibility with more continuous integration servers.

NEW FEATURES:
1. FakeTable now handles a single parameter, combining the schema and table name.
This makes FakeTable more consistent with other methods in tSQLt.
2. ApplyConstraint now handles two parameters, combining the schema and table 
name as the first parameter. This makes ApplyConstraint more consistent with other 
methods in tSQLt.

---------------------------

build.11:

BUG FIXES:
1. ApplyConstraint for a Foreign Key that references a Faked Table is fixed.
2. SetClrEnabled.sql utlity file now handles database names with spaces.
3. Test cases whose names contain a percent sign are now displayed correctly 